@@ -1,23 +1,32 @@
 package com.application.service.implementation.categoria;
 
 import com.application.persistence.entity.categoria.Categoria;
+import com.application.persistence.entity.categoria.SubCategoria;
 import com.application.persistence.repository.CategoriaRepository;
+import com.application.persistence.repository.SubCategoriaRepository;
 import com.application.presentation.dto.categoria.request.CategoriaCreateRequest;
 import com.application.presentation.dto.categoria.response.CategoriaResponse;
+import com.application.presentation.dto.categoria.response.SubCategoriaResponse;
+import com.application.presentation.dto.general.response.BaseResponse;
 import com.application.presentation.dto.general.response.GeneralResponse;
+import com.application.service.interfaces.ImagenService;
 import com.application.service.interfaces.categoria.CategoriaService;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import java.util.List;
-import java.util.NoSuchElementException;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class CategoriaServiceImpl implements CategoriaService {
 
-    @Autowired
-    private CategoriaRepository categoriaRepository;
+    private final CategoriaRepository categoriaRepository;
+    private final ImagenService imagenService;
 
     /**
      * Obtiene una categoría por su ID.
@@ -25,13 +34,12 @@ public class CategoriaServiceImpl implements CategoriaService {
      *
      * @param id ID de la categoría a buscar
      * @return La entidad categoria encontrada
-     * @throws NoSuchElementException si la categoría no existe
+     * @throws EntityNotFoundException si la categoría no existe
      */
     @Override
     public Categoria getCategoriaById(Long id) {
         return categoriaRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException(
-                        "La categoria con id: " + id + " no existe o ha sido eliminada"));
+                .orElseThrow(() -> new EntityNotFoundException("La categoria con id: " + id + " no existe o ha sido eliminada"));
     }
 
     /**
@@ -44,16 +52,9 @@ public class CategoriaServiceImpl implements CategoriaService {
     @Override
     public List<CategoriaResponse> getCategorias() {
         List<Categoria> categorias = categoriaRepository.findAll();
-        return categorias
-                .stream()
-                .map(categoria -> {
-                    long cantidadPacks = categoriaRepository.countProductosByCategoriaId(categoria.getCategoriaId());
-                    return new CategoriaResponse(
-                            categoria.getNombre(),
-                            categoria.getDescripcion(),
-                            cantidadPacks);
-                })
-                .collect(Collectors.toList());
+        return categorias.stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     /**
@@ -65,92 +66,148 @@ public class CategoriaServiceImpl implements CategoriaService {
     @Override
     public List<CategoriaResponse> getCategoriasActivas() {
         List<Categoria> categoriasActivas = categoriaRepository.findByActivoTrue();
-        return categoriasActivas
-                .stream()
-                .map(categoria -> {
-                    long cantidadPacks = categoriaRepository.countProductosByCategoriaId(categoria.getCategoriaId());
-                    return new CategoriaResponse(
-                            categoria.getNombre(),
-                            categoria.getDescripcion(),
-                            cantidadPacks);
-                })
-                .collect(Collectors.toList());
+        return categoriasActivas.stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     /**
-     * Crea una nueva categoría.
+     * Método para crear una categoria y subcategorias a partir de un DTO de creación.
      *
-     * @param categoriaRequest DTO con los datos necesarios para crear la categoría
-     * @return DTO con mensaje de éxito
+     * @param categoriaRequest DTO con los datos de la categoría y las subcategorias
+     * @return Respuesta con mensaje de confirmación
      */
     @Override
+    @Transactional
     public GeneralResponse createCategoria(@NotNull CategoriaCreateRequest categoriaRequest) {
 
+        String imagen = this.imagenService.asignarImagen(categoriaRequest.imagen(), "imagen-categoria");
         Categoria categoria = Categoria.builder()
+                .imagen(imagen)
                 .nombre(categoriaRequest.nombre())
                 .descripcion(categoriaRequest.descripcion())
-                .activo(true)
+                .activo(categoriaRequest.activo())
                 .build();
+
+        for (String nombreSubCategoria : categoriaRequest.subcategorias()) {
+            SubCategoria subCategoria = SubCategoria.builder()
+                    .nombre(nombreSubCategoria)
+                    .build();
+            categoria.addSubCategoria(subCategoria);
+        }
 
         categoriaRepository.save(categoria);
 
-        return new GeneralResponse("categoria creada exitosamente");
+        return new GeneralResponse("Categoria creada exitosamente");
     }
 
     /**
-     * Actualiza una categoría existente.
+     * Método para actualizar una categoría y subcategorias a partir de un DTO de creación.
      *
-     * @param categoriaRequest DTO con los nuevos datos
-     * @param id               ID de la categoría a actualizar
+     * @param categoriaRequest DTO con los nuevos datos de la categoría y las subcategorias
+     * @param id ID de la categoría a actualizar
      * @return DTO con mensaje de éxito
-     * @throws NoSuchElementException si la categoría no existe
+     * @throws EntityNotFoundException si la categoría no existe
      */
     @Override
+    @Transactional
     public GeneralResponse updateCategoria(@NotNull CategoriaCreateRequest categoriaRequest, Long id) {
 
         Categoria categoria = this.getCategoriaById(id);
 
+        String imagen = this.imagenService.asignarImagen(categoriaRequest.imagen(), "imagen-categoria");
+
+        categoria.setImagen(imagen);
         categoria.setNombre(categoriaRequest.nombre());
         categoria.setDescripcion(categoriaRequest.descripcion());
+        categoria.setActivo(categoriaRequest.activo());
+
+        for (SubCategoria subCategoria : new HashSet<>(categoria.getSubCategorias())) {
+            categoria.deleteSubCategoria(subCategoria);
+        }
+
+        for (String nombreSubCategoria : categoriaRequest.subcategorias()) {
+            SubCategoria subCategoria = SubCategoria.builder()
+                    .nombre(nombreSubCategoria)
+                    .build();
+            categoria.addSubCategoria(subCategoria);
+        }
+
         categoriaRepository.save(categoria);
 
-        return new GeneralResponse("categoria actualizada exitosamente");
+        return new GeneralResponse("Categoria actualizada exitosamente");
     }
 
     /**
-     * Deshabilita una categoría.
-     * La categoría seguirá existiendo en la base de datos, pero no se mostrará en
-     * la vista de Productos.
+     * Cambia el estado de la Categoria.
      *
-     * @param id ID de la categoría a deshabilitar
-     * @return DTO con mensaje de éxito
+     * @param id ID de la categoria a cambiar su estado
+     * @return DTO con mensaje de confirmación según el estado de la categoria
+     * @throws EntityNotFoundException si la categoria no existe
+     * @apiNote Si la categoria tiene productos asociados, entonces no se podrá deshabilitar
      */
     @Override
-    public GeneralResponse disableCategoria(Long id) {
-        Categoria categoria = this.getCategoriaById(id);
-        categoria.setActivo(false);
-        categoriaRepository.save(categoria);
-        return new GeneralResponse("categoría deshabilitada exitosamente");
-    }
-
-    /**
-     * Elimina una categoría de la base de datos.
-     * Solo es posible si no tiene productos asociados.
-     *
-     * @param id ID de la categoría a eliminar
-     * @return DTO con mensaje de éxito o error
-     * @throws IllegalArgumentException si la categoría tiene productos asociados
-     */
-    @Override
-    public GeneralResponse deleteCategoria(Long id) {
+    public BaseResponse changeEstadoCategoria(Long id) {
         Categoria categoria = this.getCategoriaById(id);
 
         if (!categoria.getProductos().isEmpty()) {
-            throw new IllegalArgumentException("No es posible eliminar una categoria con productos");
+            return new BaseResponse("No es posible deshabilitar una categoria con producto asociados", false);
+        }
+
+        boolean nuevoEstado = !categoria.isActivo();
+        categoria.setActivo(nuevoEstado);
+        categoriaRepository.save(categoria);
+
+        String mensaje = nuevoEstado
+                ? "Categoría habilitada exitosamente"
+                : "Categoría deshabilitada exitosamente";
+
+        return new BaseResponse(mensaje, true);
+    }
+
+    /**
+     * Elimina una categoría y sus subcategorias de la base de datos.
+     * Solo es posible si no tiene productos asociados.
+     *
+     * @param id ID de la categoría a eliminar
+     * @return DTO con mensaje de éxito o error según el estado del success
+     */
+    @Override
+    @Transactional
+    public BaseResponse deleteCategoria(Long id) {
+        Categoria categoria = this.getCategoriaById(id);
+
+        if (!categoria.getProductos().isEmpty()) {
+            return new BaseResponse("No es posible eliminar una categoria con productos", false);
         }
 
         categoriaRepository.delete(categoria);
 
-        return new GeneralResponse("categoria eliminada exitosamente");
+        return new BaseResponse("categoria eliminada exitosamente", true);
+    }
+
+    /**
+     * Convierte una entidad Categoria a su DTO de respuesta,
+     * no incluye la cantidad de productos que tiene
+     * Para uso interno del Servicio en los métodos de búsqueda
+     *
+     * @param categoria Entidad categoria a convertir
+     * @return DTO con la información de la categoria
+     */
+    @Override
+    public CategoriaResponse toResponse(Categoria categoria) {
+        return new CategoriaResponse(
+                categoria.getCategoriaId(),
+                categoria.getImagen(),
+                categoria.getNombre(),
+                categoria.getDescripcion(),
+                categoria.isActivo(),
+                categoriaRepository.countProductosByCategoriaId(categoria.getCategoriaId()),
+                categoria.getSubCategorias().stream()
+                        .map(subCategoria -> new SubCategoriaResponse(
+                                subCategoria.getSubCategoriaId(), subCategoria.getNombre()
+                        ))
+                        .toList()
+        );
     }
 }
